--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>My Resume</title>
+        <link rel="stylesheet" href="style.css">
 </head>
 <body class="main-content">
     <header class="container header active" id="home">
