--- a/index.html
+++ b/index.html
@@ -28,9 +28,13 @@
                 </p>
                 <p>
                     <strong>SUMMARY</strong><br>
-                    • Organized and motivated employee seeking an entry-level Development position to facilitate company growth while expanding skills.<br>
-                    Completed a 24-week course in Data Analytics, Visualization, and coding, with experience in Excel, VBA, Python, Panda, Matplotlib, API's, SQL, ETL, SQLite.<br>
-                    Web Scrapping, Java, JavaScript, Plotly, leaflet, Tableau, R-Stats, AWS, Big Data, and Machine Learning.
+                    • Passionate about creating beautiful and functional websites, I am a Hardware/Software Engineer at Avnet Technology Solutions. Inspired by my colleagues and their impactful work in web development, I decided to embark on a new career path.
+
+                    I have completed courses at the University of Arizona, specializing in Data Analytics and coding. My skills include Excel, VBA, Python (Pandas, Matplotlib, APIs), SQL, ETL, SQLite, web scraping, Java, JavaScript, Plotly, Leaflet, Tableau, R-Stats, AWS, Big Data, and Machine Learning.
+                    
+                    With a strong aptitude for learning, I am confident in my ability to quickly bridge any knowledge gaps and contribute value to any team. I possess effective communication skills, motivation to take on challenging projects, and expertise in data extraction, testing, debugging, and deployment.
+                    
+                    Driven by my determination, knowledge, and experience, I am well-equipped to meet your needs and become a valuable asset to your organization.
                 </p>
                 <hr>
                 <p>
